--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Alicia Wilkerson",
   "license": "MIT",
   "dependencies": {
-    "irc": "^0.5.2"
+    "dotenv": "^6.0.0",
+    "irc": "^0.5.2",
+    "mailgun-js": "^0.18.0",
+    "moment": "^2.22.2"
   }
 }
